--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- bootstrap Icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" />
 
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- CSS Awak -->
     <link rel="stylesheet" href="style.css" />
 
@@ -49,7 +52,7 @@
     <section class="jumbotron text-center">
       <img src="img/Orlando Sirait.jpg" alt="Orlando Sirait" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Orlando Sirait</h1>
-      <p class="lead">Web Development | Fighter | Editor</p>
+      <p class="lead"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -69,13 +72,13 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right">
             <p>
               Hello, I'm orlando, a kid in the 2000s and like most generations, my relationship with the world of editors started when I was in junior high school. In this gallery I document my journey into the world of editors and web
               developers and I will update every time I finish working on a project.
             </p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-left" data-aos-delay="200">
             <p>
               Web Development is the construction and maintenance of websites; it is the work that goes behind the scenes to make websites look great, work fast and perform well with a seamless user experience. I have an interest in this
               field starting from when I was in grade 1 of high school. and I opened a service for the establishment of a website.
@@ -103,7 +106,7 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3 text-center">
-            <div class="card">
+            <div class="card" data-aos="flip-up" data-aos-duration="500">
               <img src="img/Projects/Keyboard.jpg" class="card-img-top" alt="Projects 1" />
               <div class="card-body">
                 <p class="card-text">I like to make a website. by example I have completed this portfolio project</p>
@@ -111,7 +114,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3 text-center">
-            <div class="card">
+            <div class="card" data-aos="flip-up" data-aos-duration="500" data-aos-delay="100">
               <img src="img/Projects/Foto.jpg" class="card-img-top" alt="Projects 2" width="300" height="370" />
               <div class="card-body">
                 <p class="card-text">Editing is an activity that is good to do while relaxing.with the example above.</p>
@@ -119,7 +122,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3 text-center">
-            <div class="card">
+            <div class="card" data-aos="flip-up" data-aos-duration="500" data-aos-delay="200">
               <img src="img/Projects/Taekwondo 2.jpg" class="card-img-top" alt="Projects 3 " />
               <div class="card-body">
                 <p class="card-text">Taekwondo is a modern martial art that has always been characterized by its fast, high kicks and spinning strokes. and I am happy to participate in this activity.</p>
@@ -127,16 +130,16 @@
             </div>
           </div>
           <div class="col-md-4 mb-3 text-center">
-            <div class="card">
-              <img src="img/Projects/Editor.jpg" class="card-img-top" alt="Projects 3 " />
+            <div class="card" data-aos="flip-up" data-aos-duration="500" data-aos-delay="300">
+              <img src="img/Projects/Editor.jpg" class="card-img-top" alt="Projects 4 " />
               <div class="card-body">
                 <p class="card-text">I am able to edit with the "double exposure" technique as above.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3 text-center">
-            <div class="card">
-              <img src="img/Projects/Editor 1.jpg" class="card-img-top" alt="Projects 3 " />
+            <div class="card" data-aos="flip-up" data-aos-duration="500" data-aos-delay="400">
+              <img src="img/Projects/Editor 1.jpg" class="card-img-top" alt="Projects 5 " />
               <div class="card-body">
                 <p class="card-text">editing landscape photos is my favorite part. like the example above.</p>
               </div>
@@ -154,6 +157,70 @@
       </svg>
     </section>
     <!-- Akhir Projects -->
+
+    <!-- Gallery -->
+    <section id="gallery">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>Gallery</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-3">
+            <a href="#">
+              <img src="Gallery/Thumbnail/01.jpg" alt="Gambar 1" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="Gallery/Thumbnail/02.jpg" alt="Gambar 2" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="Gallery/Thumbnail/03.jpg" alt="Gambar 3" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="Gallery/Thumbnail/04.jpg" alt="Gambar 4" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="Gallery/Thumbnail/05.jpg" alt="Gambar 5" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="Gallery/Thumbnail/06.jpg" alt="Gambar 6" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="Gallery/Thumbnail/07.jpg" alt="Gambar 7" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="Gallery/Thumbnail/08.jpg" alt="Gambar 8" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="Gallery/Thumbnail/09.jpg" alt="Gambar 9" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="Gallery/Thumbnail/10 (1).jpg" alt="Gambar 10" class="img-fluid gallery-img" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Akhir Gallery -->
 
     <!-- Contact -->
     <section id="contact">
@@ -209,6 +276,32 @@
     <!-- Akhir Footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      const galleryImage = document.querySelectorAll('.gallery-img');
+
+      galleryImage.forEach((img, i) => {
+        img.dataset.aos = 'fade-down';
+        img.dataset.aosDelay = i * 100;
+        img.dataset.aosDuration = 1000;
+      });
+
+      AOS.init({
+        once: true,
+        duration: 2000,
+      });
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/TextPlugin.min.js"></script>
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to('.lead', { duration: 2, delay: 1.5, text: 'Web Development | Fighter | Editor' });
+      gsap.from('.jumbotron img', { duration: 1, rotateY: 360, opacity: 0 });
+      gsap.from('.navbar', { duration: 1.5, y: '-100%', opacity: 0, ease: 'bounce' });
+      gsap.from('.display-4', { duration: 1, x: -50, opacity: 0, delay: 0.5, ease: 'back' });
+    </script>
 
     <script>
       const scriptURL = 'https://script.google.com/macros/s/AKfycbw2sYCgF4gMQjYiZni5rKNm0keKCq9Nxcx09yDkImlda19NvP4u548wtGebI1IGXw8lag/exec';
